fix: Address editing on mobile

--- a/src/features/Address/address.module.styl
+++ b/src/features/Address/address.module.styl
@@ -63,6 +63,22 @@ header.view-header
     border-radius 8px
     width 50%
 
+.address-modal-overlay
+  position absolute
+  top 80px
+  left 120px
+  right 120px
+  bottom 80px
+  background-color rgba(0, 0, 0, 0)
+  +$below(md)
+    top 50px !important
+    left 0px !important
+    right 0px
+    bottom 0px
+    width 100vw
+    height 100vh
+    padding 0px !important
+
 .address-edit-container
   position relative
   height 100%
